--- a/fourInaRow.html
+++ b/fourInaRow.html
@@ -1,7 +1,19 @@
 <html>
 
-<head></head>
+<head>
+    <link rel="stylesheet" href="fourInaRow.css">
+</head>
 
-<body></body>
+<body>
+    <h1 id="header">Let's play Four in a Row</h1>
+    <h2 id="game-status"></h2>
+    <div id="inputs">
+        <input class="input" id="input-rows">Number of rows</input>
+        <input class="input" id="input-cols">Number of columns</input>
+    </div>
+    <div id="board"></div>
+    <button id="restart">Restart game</button>
+    <script src="main.js"></script>
+</body>
 
 </html>
