User input implementation and layout improvements

--- a/fourInaRow.html
+++ b/fourInaRow.html
@@ -8,8 +8,8 @@
     <h1 id="header">Let's play Four in a Row</h1>
     <h2 id="game-status"></h2>
     <div id="inputs">
-        <input class="input" id="input-rows">Number of rows</input>
-        <input class="input" id="input-cols">Number of columns</input>
+        <input class="input" id="input-rows" value="6">Number of rows</input>
+        <input class="input" id="input-cols" value="7">Number of columns</input>
     </div>
     <div id="board"></div>
     <button id="restart">Restart game</button>
