--- a/fourInaRow.html
+++ b/fourInaRow.html
@@ -12,7 +12,7 @@
         <input class="input" id="input-cols" value="7">Number of columns</input>
     </div>
     <div id="board"></div>
-    <button id="restart">Restart game</button>
+    <button id="restart-btn">Restart game</button>
     <script src="main.js"></script>
 </body>
 
