--- a/fourInaRow.html
+++ b/fourInaRow.html
@@ -8,10 +8,10 @@
     <h1 id="header">Let's play Four in a Row</h1>
     <h2 id="game-status"></h2>
     <div id="inputs">
-        <input class="input" id="input-rows" value="6">Number of rows</input>
-        <input class="input" id="input-cols" value="7">Number of columns</input>
+        <input class="input" type=number id="input-rows" value=6>Number of rows</input>
+        <input class="input" type=number id="input-cols" value=7>Number of columns</input>
     </div>
-    <div id="board"></div>
+    <div id="board" class="board"></div>
     <button id="restart-btn">Restart game</button>
     <script src="main.js"></script>
 </body>
